--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinay Rajan</title>
+    <title>Vinay Rajan | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="app.js"></script>
   </head>
@@ -20,7 +20,7 @@
     </header>
     <div class="lg">
       <h1 class="vr">Vinay Rajan</h1>
-      <img class="img" src="images/bg-preview.png" alt="Vinay Rajan" />
+      <img class="img" src="images/bg-main.png" alt="Vinay Rajan" />
     </div>
     <br />
     <div class="title" id="about">About</div>
@@ -47,7 +47,7 @@
     </section>
 
     <div class="title" id="Projects">Projects</div>
-    <section class="hidden">
+    <section class="hidden" id="projects">
       <p class="projects">
         Sint irure nulla et ipsum nostrud sit dolore irure minim eiusmod nostrud
         labore mollit. Amet proident consectetur aliquip quis sint. Nisi mollit
