--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vinay Rajan | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
-    <script defer src="app.js"></script>
+    <script defer src="main.js"></script>
   </head>
   <body>
     <header>
@@ -14,22 +14,25 @@
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#Socials">Contact</a></li>
         </ul>
       </nav>
     </header>
     <div class="lg">
       <h1 class="vr">Vinay Rajan</h1>
-      <img class="img" src="images/bg-main.png" alt="Vinay Rajan" />
+      <img class="bg" src="images/bg-main.png" alt="Vinay Rajan" />
     </div>
     <br />
     <div class="title" id="about">About</div>
-    <p class="bio">
+    <div class="bio">
+      <p>
       A second‐year student at SRM Institute of Science and Technology,
-      Kattankulathur, pursuing a Bachelor’s Degree in Computer Science w/s Cloud
-      Computing. Dedicated to making quality software using appropriate
-      engineering methods and embracing future opportunities in the field of
-      Tech.
+      Kattankulathur, pursuing a Bachelor’s Degree in Computer Science with
+      specialization in Cloud Computing.
+    </p>
+    <p>
+      Currently learing Golang & Compeitive  
+      Programming with Data Structures & Algorithms.
     </p>
 
     <div class="title" id="skills">Skills</div>
@@ -49,37 +52,37 @@
     <div class="title" id="Projects">Projects</div>
     <section class="hidden" id="projects">
       <p class="projects">
-        Sint irure nulla et ipsum nostrud sit dolore irure minim eiusmod nostrud
-        labore mollit. Amet proident consectetur aliquip quis sint. Nisi mollit
-        fugiat enim ullamco fugiat est. Culpa labore eiusmod enim do. Incididunt
-        ex occaecat laborum sit proident esse aute irure cillum tempor. Do ad
-        consequat ut reprehenderit ad veniam anim amet voluptate consequat quis.
-        Duis est dolore in adipisicing Pariatur officia et voluptate dolor
-        incididunt magna magna. Nostrud consequat qui exercitation duis est amet
-        enim cupidatat commodo irure. Esse qui excepteur anim reprehenderit
-        tempor ullamco amet ad reprehenderit deserunt deserunt aliqua. Ipsum do
-        id esse elit adipisicing elit fugiat ullamco ex magna irure ut. Qui sit
-        anim veniam occaecat ex tempor sint do. Laboris eiusmod consequat elit
-        ut dolor qui.
+        <a href="https://github.com/stuff-makers/Polinyx">Polinyx</a>
+        <br/>
+        A video chatting application with sign language interpretation and Speech-to-text features. Developed to aid hearing and speech impaired people.
+        <br/>
+        <br/>
+        <a href="https://github.com/vinay-04/unfold-precompile-evm">Polinyx</a>
+        <br/>
+        A ZkSnark based precompile for the Avalanche network.
       </p>
     </section>
-
-    <div class="title" id="contact">Contact Me!</div>
-    <section class="hidden">
-      <p class="contact">
-        Sint irure nulla et ipsum nostrud sit dolore irure minim eiusmod nostrud
-        labore mollit. Amet proident consectetur aliquip quis sint. Nisi mollit
-        fugiat enim ullamco fugiat est. Culpa labore eiusmod enim do. Incididunt
-        ex occaecat laborum sit proident esse aute irure cillum tempor. Do ad
-        consequat ut reprehenderit ad veniam anim amet voluptate consequat quis.
-        Duis est dolore in adipisicing Pariatur officia et voluptate dolor
-        incididunt magna magna. Nostrud consequat qui exercitation duis est amet
-        enim cupidatat commodo irure. Esse qui excepteur anim reprehenderit
-        tempor ullamco amet ad reprehenderit deserunt deserunt aliqua. Ipsum do
-        id esse elit adipisicing elit fugiat ullamco ex magna irure ut. Qui sit
-        anim veniam occaecat ex tempor sint do. Laboris eiusmod consequat elit
-        ut dolor qui.
+    <div class="hackathons">
+      <div class="title">Hackathons</div>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint aut ab adipisci ut impedit, iste voluptate? Error harum eius, ullam totam sed et fuga quasi illo? Cupiditate incidunt nemo repellat?
       </p>
+    </div>
+    <section class="hidden">
+      <div class="socials">
+      <div class="title">Socials</div>  
+        <p class="socials">
+          <a  href="https://github.com/vinay-04/">
+            <img src="icons/github.png" alt="" width="100" height=" 100"> 
+          </a>
+          <a href="mailto:vinayrajan04@gmail.com">
+            <img src="icons/mail.png" alt="" width="100" height="100">
+          </a>
+          <a href="https://www.linkedin.com/in/vinay-rajan-s-b63248250/">
+            <img src="icons/lkdin.png" alt="" width="100" height="100">
+          </a>
+        </p>
+      </div>
     </section>
   </body>
 </html>
