--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#Socials">Contact</a></li>
+          <li><a href="#socials">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -49,8 +49,8 @@
       </div>
     </section>
 
-    <div class="title" id="Projects">Projects</div>
     <section class="hidden" id="projects">
+      <div class="title" id="Projects">Projects</div>
       <p class="projects">
         <a href="https://github.com/stuff-makers/Polinyx">Polinyx</a>
         <br/>
@@ -62,13 +62,19 @@
         A ZkSnark based precompile for the Avalanche network.
       </p>
     </section>
-    <div class="hackathons">
-      <div class="title">Hackathons</div>
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint aut ab adipisci ut impedit, iste voluptate? Error harum eius, ullam totam sed et fuga quasi illo? Cupiditate incidunt nemo repellat?
-      </p>
-    </div>
     <section class="hidden">
+      <div class="hackathons">
+        <div class="title">Hackathons</div>
+        <p>
+          I enjoy participating in Hackathons, a great way to learn and implement new things under a time constraint. And of course you get to meet like-minded people .
+          I have been participating in hackathons since my high school days and have won a few of them.
+        </p>
+        <p>
+          I Recently participated in <a href="https://unfoldweb3.com">Unfold 2023</a> and was able to win <a href="https://x.com/Avalanche_In/status/1717543567571464642?s=20">3rd Position</a> in the Avalanche Track along with a prize amount of $1000
+        </p>
+      </div>
+    </section>
+    <section class="hidden" id="socials">
       <div class="socials">
       <div class="title">Socials</div>  
         <p class="socials">
