--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         A video chatting application with sign language interpretation and Speech-to-text features. Developed to aid hearing and speech impaired people.
         <br/>
         <br/>
-        <a href="https://github.com/vinay-04/unfold-precompile-evm">Polinyx</a>
+        <a href="https://github.com/vinay-04/unfold-precompile-evm">ZkSnark Precompile</a>
         <br/>
         A ZkSnark based precompile for the Avalanche network.
       </p>
@@ -66,7 +66,7 @@
       <div class="hackathons">
         <div class="title">Hackathons</div>
         <p>
-          I enjoy participating in Hackathons, a great way to learn and implement new things under a time constraint. And of course you get to meet like-minded people .
+          I enjoy participating in Hackathons, a great way to learn and implement new things under a time constraint and of course you get to meet like-minded people .
           I have been participating in hackathons since my high school days and have won a few of them.
         </p>
         <p>
