--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vinay Rajan | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="main.js"></script>
+    <link rel="icon" href="icons/VR.svg">
   </head>
   <body>
     <header>
